bunch of changes. check 1.2.0 patch notes. Mainly hanging signs and wall lantern systems