@@ -2,10 +2,9 @@ package net.mehvahdjukaar.supplementaries.common.utils;
 
 import net.mehvahdjukaar.selene.Selene;
 import net.mehvahdjukaar.supplementaries.Supplementaries;
+import net.mehvahdjukaar.supplementaries.client.Materials;
+import net.mehvahdjukaar.supplementaries.client.WallLanternStuff;
 import net.mehvahdjukaar.supplementaries.common.block.tiles.BookPileBlockTile;
-import net.mehvahdjukaar.supplementaries.datagen.types.IWoodType;
-import net.mehvahdjukaar.supplementaries.datagen.types.WoodTypes;
-import net.mehvahdjukaar.supplementaries.setup.RegistryHelper;
 import net.minecraft.client.renderer.Sheets;
 import net.minecraft.client.renderer.texture.MissingTextureAtlasSprite;
 import net.minecraft.client.renderer.texture.TextureAtlas;
@@ -14,9 +13,8 @@ import net.minecraft.world.item.DyeColor;
 import net.minecraft.world.level.block.entity.BannerPattern;
 import net.minecraftforge.client.event.TextureStitchEvent;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 public class Textures {
@@ -34,8 +32,6 @@ public class Textures {
     public static final ResourceLocation CHAIN_TEXTURE = new ResourceLocation("minecraft:block/chain");
     public static final ResourceLocation FLOWING_WATER_TEXTURE = new ResourceLocation("minecraft:block/water_flow");
     public static final ResourceLocation SLIME_TEXTURE = new ResourceLocation("minecraft:block/slime_block");
-    public static final ResourceLocation BLACKBOARD_TEXTURE = new ResourceLocation(MOD_ID + ":blocks/blackboard");
-    public static final ResourceLocation BLACKBOARD_TEXTURE_BACK = new ResourceLocation(MOD_ID + ":blocks/blackboard_back");
 
     //fluids
 
@@ -45,18 +41,9 @@ public class Textures {
     public static final ResourceLocation HONEY_TEXTURE = new ResourceLocation(LIB, "blocks/honey_liquid");
     public static final ResourceLocation DRAGON_BREATH_TEXTURE = new ResourceLocation(LIB, "blocks/dragon_breath_liquid");
     public static final ResourceLocation SOUP_TEXTURE = new ResourceLocation(LIB, "blocks/soup_liquid");
-    public static final ResourceLocation XP_TEXTURE = new ResourceLocation(LIB, "blocks/xp_still");
-    public static final ResourceLocation XP_TEXTURE_FLOW = new ResourceLocation(LIB, "blocks/xp_flow");
-    public static final ResourceLocation MAGMA_TEXTURE = new ResourceLocation(LIB, "blocks/magma_still");
-    public static final ResourceLocation MAGMA_TEXTURE_FLOW = new ResourceLocation(LIB, "blocks/magma_flow");
     //blocks (to stitch)
-    public static final ResourceLocation SUGAR_TEXTURE = Supplementaries.res("blocks/sugar");
-    public static final ResourceLocation SOUL_TEXTURE = Supplementaries.res("blocks/soul");
     public static final ResourceLocation FISHIES_TEXTURE = Supplementaries.res("blocks/fishies");
     public static final ResourceLocation BELLOWS_TEXTURE = Supplementaries.res("entity/bellows");
-    public static final ResourceLocation LASER_BEAM_TEXTURE = Supplementaries.res("blocks/laser_beam");
-    public static final ResourceLocation LASER_OVERLAY_TEXTURE = Supplementaries.res("blocks/laser_overlay");
-    public static final ResourceLocation LASER_BEAM_END_TEXTURE = Supplementaries.res("blocks/laser_beam_end");
     public static final ResourceLocation CLOCK_HAND_TEXTURE = Supplementaries.res("blocks/clock_hand");
     public static final ResourceLocation CRIMSON_LANTERN_TEXTURE = Supplementaries.res("blocks/crimson_lantern_front");
     public static final ResourceLocation HOURGLASS_REDSTONE = Supplementaries.res("blocks/hourglass_redstone");
@@ -66,10 +53,10 @@ public class Textures {
     public static final ResourceLocation HOURGLASS_GUNPOWDER = Supplementaries.res("blocks/hourglass_gunpowder");
     public static final ResourceLocation BLACKBOARD_GRID = Supplementaries.res("blocks/blackboard_grid");
 
-    public static final ResourceLocation TIMBER_FRAME_TEXTURE = Supplementaries.res("blocks/timber_frame");
-    public static final ResourceLocation TIMBER_BRACE_TEXTURE = Supplementaries.res("blocks/timber_brace");
-    public static final ResourceLocation TIMBER_BRACE_F_TEXTURE = Supplementaries.res("blocks/timber_brace_f");
     public static final ResourceLocation TIMBER_CROSS_BRACE_TEXTURE = Supplementaries.res("blocks/timber_cross_brace");
+    public static final ResourceLocation BLACKBOARD_TEXTURE = Supplementaries.res("blocks/blackboard");
+    public static final ResourceLocation WALL_LANTERN_TEXTURE = Supplementaries.res("blocks/wall_lantern");
+
     //entities
     public static final ResourceLocation GLOBE_TEXTURE = Supplementaries.res("textures/entity/globes/globe_the_world.png");
     public static final ResourceLocation GLOBE_FLAT_TEXTURE = Supplementaries.res("textures/entity/globes/globe_flat.png");
@@ -101,21 +88,7 @@ public class Textures {
     public static final ResourceLocation PRESENT_BLOCK_GUI_TEXTURE = Supplementaries.res("textures/gui/present_block_gui.png");
     public static final ResourceLocation RED_MERCHANT_GUI_TEXTURE = Supplementaries.res("textures/gui/red_merchant.png");
     public static final ResourceLocation MISC_ICONS_TEXTURE = Supplementaries.res("textures/gui/misc.png");
-    //map markers
-    public static final ResourceLocation SIGN_POST_MARKER_TEXTURE = Supplementaries.res("textures/map/sign_post.png");
-    public static final ResourceLocation FLAG_MARKER_TEXTURE = Supplementaries.res("textures/map/flag.png");
-    public static final ResourceLocation BANNER_MARKER_TEXTURE = Supplementaries.res("textures/map/banner.png");
-    public static final ResourceLocation BED_MARKER_TEXTURE = Supplementaries.res("textures/map/bed.png");
-    public static final ResourceLocation RESPAWN_ANCHOR_MARKER_TEXTURE = Supplementaries.res("textures/map/respawn_anchor.png");
-    public static final ResourceLocation LODESTONE_MARKER_TEXTURE = Supplementaries.res("textures/map/lodestone.png");
-    public static final ResourceLocation BEACON_MARKER_TEXTURE = Supplementaries.res("textures/map/beacon.png");
-    public static final ResourceLocation CONDUIT_MARKER_TEXTURE = Supplementaries.res("textures/map/conduit.png");
-    public static final ResourceLocation NETHER_PORTAL_MARKER_TEXTURE = Supplementaries.res("textures/map/nether_portal.png");
-    public static final ResourceLocation END_PORTAL_MARKER_TEXTURE = Supplementaries.res("textures/map/end_portal.png");
-    public static final ResourceLocation END_GATEWAY_MARKER_TEXTURE = Supplementaries.res("textures/map/end_gateway.png");
 
-    public static final Map<IWoodType, ResourceLocation> HANGING_SIGNS_TEXTURES = new HashMap<>();
-    public static final Map<IWoodType, ResourceLocation> SIGN_POSTS_TEXTURES = new HashMap<>();
     public static final Map<BannerPattern, ResourceLocation> FLAG_TEXTURES = new HashMap<>();
     public static final Map<BookPileBlockTile.BookColor, ResourceLocation> BOOK_TEXTURES = new HashMap<>();
     public static final ResourceLocation BOOK_ENCHANTED_TEXTURES = Supplementaries.res("entity/books/book_enchanted");
@@ -130,10 +103,6 @@ public class Textures {
     public static final ResourceLocation ANTIQUABLE_FONT = Supplementaries.res("antiquable");
 
     static {
-        for (IWoodType type : WoodTypes.TYPES.values()) {
-            SIGN_POSTS_TEXTURES.put(type, Supplementaries.res("entity/sign_posts/" + type.getLocation(type.getSignPostName())));
-        }
-
         for (BannerPattern pattern : BannerPattern.values()) {
             FLAG_TEXTURES.put(pattern, Supplementaries.res("entity/flags/" + pattern.getFilename()));
         }
@@ -149,16 +118,22 @@ public class Textures {
     }
 
     public static void stitchTextures(TextureStitchEvent.Pre event) {
-        ArrayList<ResourceLocation> blocks = new ArrayList<>(Arrays.asList(
-                FISHIES_TEXTURE, BELLOWS_TEXTURE, LASER_BEAM_TEXTURE, LASER_BEAM_END_TEXTURE, LASER_OVERLAY_TEXTURE,
-                SUGAR_TEXTURE, CLOCK_HAND_TEXTURE, HOURGLASS_REDSTONE, HOURGLASS_GLOWSTONE, HOURGLASS_SUGAR, HOURGLASS_BLAZE,
-                HOURGLASS_GUNPOWDER, BLACKBOARD_GRID, BUBBLE_BLOCK_TEXTURE));
+        List<ResourceLocation> blocks = List.of(
+                FISHIES_TEXTURE, BELLOWS_TEXTURE, CLOCK_HAND_TEXTURE, HOURGLASS_REDSTONE,
+                HOURGLASS_GLOWSTONE, HOURGLASS_SUGAR, HOURGLASS_BLAZE,
+                HOURGLASS_GUNPOWDER, BLACKBOARD_GRID, BUBBLE_BLOCK_TEXTURE);
 
         ResourceLocation loc = event.getAtlas().location();
 
         if (loc.equals(TextureAtlas.LOCATION_BLOCKS)) {
             for (ResourceLocation r : blocks) {
                 event.addSprite(r);
+            }
+            for (var s : Materials.SIGN_POSTS_MATERIALS.values()) {
+                event.addSprite(s.texture());
+            }
+            for (var w : WallLanternStuff.SPECIAL_TEXTURES.values()) {
+                event.addSprite(w);
             }
         } else if (loc.equals(Sheets.BANNER_SHEET)) {
             try {
